--- a/pe_revatua/views/contact_partner.xml
+++ b/pe_revatua/views/contact_partner.xml
@@ -2,7 +2,7 @@
 <odoo><data>
     
     <record id="pe_revatua_res_partner_inherit_form" model="ir.ui.view">
-        <field name="name">res.partner.inherit.form</field>
+        <field name="name">Pacific-ERP res.partner : pe_revatua (form)</field>
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form" />
         <field name="arch" type="xml">
