--- a/pe_revatua/report/admg_template.xml
+++ b/pe_revatua/report/admg_template.xml
@@ -51,7 +51,9 @@
                                     <t t-set="current_subtotal" t-value="current_subtotal + line.price_subtotal" groups="account.group_show_line_subtotals_tax_excluded"/>
                                     <tr t-att-class="'bg-200 font-weight-bold o_line_section' if line.display_type == 'line_section' else 'font-italic o_line_note' if line.display_type == 'line_note' else ''">
                                         <t t-if="not line.display_type" name="account_invoice_line_accountable">
-                                            <td name="account_invoice_line_name"><span t-field="line.name" t-options="{'widget': 'text'}"/></td>
+                                            <td name="account_invoice_line_name">
+                                                <span t-field="line.product_id"/>
+                                            </td>
                                             <td class="text-right">
                                                 <span t-field="line.tarif_maritime"/>
                                             </td>
