--- a/pe_revatua/views/account_move.xml
+++ b/pe_revatua/views/account_move.xml
@@ -5,12 +5,12 @@
         <field name="name">Pacific-ERP account.move : pe_revatua (form)</field>
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_form" />
-        <field name="groups_id" eval="[(6, 0, [ref('pe_revatua.group_revatua_users') ])]"/>
+        <!-- <field name="groups_id" eval="[(6, 0, [ref('pe_revatua.group_revatua_users') ])]"/> -->
         <field name="arch" type="xml">
         <!-- Form -->
             <!-- Coche Revatua -->
             <xpath expr="//page[@name='other_info']//field[@name='company_id']" position="after">
-                <field name="revatua_ck" groups="base.group_no_one"/>
+                <field name="revatua_ck" invisible="1"/>
             </xpath>
             <!-- Somme de la facture -->
             <xpath expr="//form[1]/sheet[1]/notebook[1]/page[1]/group[1]/group[1]/field[@name='narration']" position="after">
@@ -72,8 +72,8 @@
             
             <!-- Rajouter les notions de poids/volumes -->
             <xpath expr="//page[1]/field[@name='invoice_line_ids']/tree[1]/field[@name='product_uom_id']" position="after">
-                <field name="r_volume" string="Vol(m³)" optional="show" attrs="{'column_invisible': [('parent.revatua_ck', '=', False)]}"/>
-                <field name="r_weight" string="Poids(T)" optional="show" attrs="{'column_invisible': [('parent.revatua_ck', '=', False)]}"/>
+                <field name="r_volume" string="Vol(m³)" optional="show"/>
+                <field name="r_weight" string="Poids(T)" optional="show"/>
             </xpath>
             <!-- Ajout des champs sur le deuxieme onglet pour sauvegarde -->
             <xpath expr="//form[1]/sheet[1]/notebook[1]/page[2]/field[@name='line_ids']/tree[1]/field[@name='account_id']" position="after">
