--- a/pe_revatua/views/sale_order.xml
+++ b/pe_revatua/views/sale_order.xml
@@ -21,10 +21,11 @@
                 <xpath expr="//field[@name='pe_destination']" position="after">
                     <field name="is_deliver" widget="boolean_toggle" attrs="{'readonly': [('state', 'not in', ('sale','done'))], 'invisible': [('revatua_ck', '=', False)]}"/>
                 </xpath>
-                <!-- Client unituqment aremiti -->
-                <xpath expr="//field[@name='partner_id']" position="replace">
-                    <field name="partner_id" widget="res_partner_many2one" context="{'res_partner_search_mode': 'customer', 'show_address': 1, 'show_vat': True}" domain="[('company_id','=',allowed_company_ids[0])]" options="{&quot;always_reload&quot;:true}"/>
-                </xpath>
+                <!-- Client uniquement aremiti -->
+                <!-- <xpath expr="//field[@name='partner_id']" position="replace">
+                    <field name="partner_id" widget="res_partner_many2one" context="{'res_partner_search_mode': 'customer', 'show_address': 1, 'show_vat': True}"
+                        domain="[('company_id','=',allowed_company_ids[0])]" options="{&quot;always_reload&quot;:true}"/>
+                </xpath> -->
                 <!-- champs custom revatua -->
                 <xpath expr="//group[@name='sale_header']" position="after">
                     <group name="detail_livraison" attrs="{'invisible': [('revatua_ck', '=', False)]}">
@@ -45,11 +46,12 @@
                     </group>
                 </xpath>
             <!-- Ligne d'articles -->
-                <!-- Ligne d'article -->
-                <xpath expr="//page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='product_id']" position="replace">
-                    <!-- Aremiti -->
-                    <field name="product_id" domain="[('sale_ok', '=', True),('company_id', '=', allowed_company_ids[0])]" context="{'partner_id':parent.partner_id, 'quantity':product_uom_qty, 'pricelist':parent.pricelist_id, 'uom':product_uom, 'company_id': parent.company_id}" attrs="{'readonly': [('product_updatable', '=', False)],'required': [('display_type', '=', False)],}" force_save="1"/>
-                </xpath>
+                <!-- Articles uniquement Aremiti -->
+                <!-- <xpath expr="//page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='product_id']" position="replace">
+                    <field name="product_id" domain="[('sale_ok', '=', True),('company_id', '=', allowed_company_ids[0])]"
+                        context="{'partner_id':parent.partner_id, 'quantity':product_uom_qty, 'pricelist':parent.pricelist_id, 'uom':product_uom, 'company_id': parent.company_id}"
+                        attrs="{'readonly': [('product_updatable', '=', False)],'required': [('display_type', '=', False)],}" force_save="1"/>
+                </xpath> -->
                 <!-- Renommer Quantité -->
                 <xpath expr="//page[@name='order_lines']/field[@name='order_line']/tree[1]/field[@name='product_uom_qty']" position="attributes">
                     <attribute name="string">Qté</attribute>
