--- a/pe_customer_stock/wizard/customer_stock_wizard_view.xml
+++ b/pe_customer_stock/wizard/customer_stock_wizard_view.xml
@@ -11,27 +11,36 @@
                         <group>
                             <group>
                                 <field name="direct_delivery"/>
-                                <field name="partner_id"/>
-                                <field name="destination_id" attrs="{'invisible' : [('direct_delivery','=', True)]}" context="{'default_location_id','=' 5}"/>
+                                <field name="partner_id" required="1"/>
                                 <field name="origin"/>
                                 <field name="picking_id" invisible="0"/>
                             </group>
                         </group>
                         <notebook>
                             <page string="Opérations">
-                                <field name="wizard_lines">
-                                    <tree create="0" delete="0">
-                                        <field name="wizard_id" optional="hide"/>
-                                        <field name="move_id" optional="hide"/>
-                                        <field name="product_id"/>
-                                        <field name="quantity"/>
-                                        <field name="product_uom_id"/>
-                                        <field name="product_uom_category_id" optional="hide"/>
+                                <field name="wizard_lines" mode="tree">
+                                    <tree create="0" delete="0" editable="top" edit="1">
+                                        <field name="product_id" readonly="1"/>
+                                        <field name="destination_id" 
+                                            attrs="{'required': [('direct_delivery','=', True)], 'column_invisible' : [('parent.direct_delivery','=', False)]}" 
+                                            context="{'default_location_id': 5}"/>
+                                        <field name="quantity" readonly="1"/>
+                                        <field name="product_uom_id" readonly="1"/>
+                                        <!-- Invisible -->
+                                        <field name="direct_delivery"  readonly="1" optional="hide"/>
+                                        <field name="product_uom_category_id" readonly="1" optional="hide"/>
+                                        <field name="wizard_id" readonly="1" optional="hide"/>
+                                        <field name="move_id" readonly="1" optional="hide"/>
                                     </tree>
                                 </field>
                             </page>
                         </notebook>
                     </sheet>
+                    <footer>
+                        <button string="Confirmer et voir" name="button_confirm" context="{'view_customer_picking':True}" type="object" class="btn-primary"/>
+                        <button string="Confirmer" name="button_confirm" type="object" class="btn-primary"/>
+                        <button string="Annuler" class="btn-secondary" special="cancel"/>
+                    </footer>
                 </form>
             </field>
         </record>
