[UPDATE] pe_customer_stock v0.0.2: Livraison directe (Good) | Transfert interne stock (à terminer

--- a/pe_customer_stock/wizard/customer_stock_wizard_view.xml
+++ b/pe_customer_stock/wizard/customer_stock_wizard_view.xml
@@ -12,6 +12,7 @@
                             <group>
                                 <field name="direct_delivery"/>
                                 <field name="partner_id" required="1"/>
+                                <field name="destination_id" attrs="{'invisible' : [('direct_delivery','=', True)]}" />
                                 <field name="origin"/>
                                 <field name="picking_id" invisible="0"/>
                             </group>
@@ -20,25 +21,25 @@
                             <page string="Opérations">
                                 <field name="wizard_lines" mode="tree">
                                     <tree create="0" delete="0" editable="top" edit="1">
-                                        <field name="product_id" readonly="1"/>
+                                        <field name="product_id" readonly="1" force_save="1"/>
                                         <field name="destination_id" 
-                                            attrs="{'required': [('direct_delivery','=', True)], 'column_invisible' : [('parent.direct_delivery','=', False)]}" 
+                                            attrs="{'required': [('direct_delivery','=', False)], 'column_invisible' : [('parent.direct_delivery','=', True)]}" 
                                             context="{'default_location_id': 5}"/>
-                                        <field name="quantity" readonly="1"/>
-                                        <field name="product_uom_id" readonly="1"/>
+                                        <field name="quantity" readonly="1" force_save="1"/>
+                                        <field name="product_uom_id" readonly="1" force_save="1"/>
                                         <!-- Invisible -->
-                                        <field name="direct_delivery"  readonly="1" optional="hide"/>
-                                        <field name="product_uom_category_id" readonly="1" optional="hide"/>
-                                        <field name="wizard_id" readonly="1" optional="hide"/>
-                                        <field name="move_id" readonly="1" optional="hide"/>
+                                        <field name="direct_delivery" optional="hide"/>
+                                        <field name="product_uom_category_id" optional="hide"/>
+                                        <field name="wizard_id" optional="hide"/>
+                                        <field name="move_id" optional="hide"/>
                                     </tree>
                                 </field>
                             </page>
                         </notebook>
                     </sheet>
                     <footer>
-                        <button string="Confirmer et voir" name="button_confirm" context="{'view_customer_picking':True}" type="object" class="btn-primary"/>
-                        <button string="Confirmer" name="button_confirm" type="object" class="btn-primary"/>
+                        <button string="Confirmer et voir" name="button_confirm" context="{'view_customer_picking':True}" type="object" class="oe_highlight"/>
+                        <button string="Confirmer" name="button_confirm" type="object" class="oe_highlight"/>
                         <button string="Annuler" class="btn-secondary" special="cancel"/>
                     </footer>
                 </form>
