--- a/pe_customer_stock/wizard/customer_stock_deliver_wizard_view.xml
+++ b/pe_customer_stock/wizard/customer_stock_deliver_wizard_view.xml
@@ -8,6 +8,9 @@
             <field name="arch" type="xml">
                 <form>
                     <sheet>
+                        <p>
+                            Dans le cas de multiple emplacement, plusieurs livraison sera créer 1 pour chaque emplacements présent dans la liste
+                        </p>
                         <group>
                             <group>
                                 <field name="customer_stock_id" readonly="1"/>
@@ -17,13 +20,18 @@
                         </group>
                         <notebook>
                             <page string="Opérations">
-                                <field name="wizard_lines" mode="tree">
+                                <field name="wizard_lines" mode="tree" context="{'shortname':True}">
                                     <tree create="0" delete="1" editable="top" edit="1">
                                         <field name="product_id" readonly="1" force_save="1"/>
+                                        <field name="location_id" readonly="1" force_save="1"/>
                                         <field name="entry_date" readonly="1" force_save="1"/>
                                         <field name="exit_date" readonly="0" force_save="1"/>
                                         
+                                        <field name="volume" readonly="0" force_save="1"/>
+                                        <field name="max_volume" optional="hide" readonly="0" force_save="1"/>
                                         <field name="quantity" readonly="0" force_save="1"/>
+                                        <field name="max_quantity" optional="hide" readonly="0" force_save="1"/>
+                                        <field name="delta_day" optional="hide" readonly="0" force_save="1"/>
                                         <field name="product_uom_id" readonly="1" force_save="1"/>
                                         <!-- Invisible -->
                                         <field name="product_uom_category_id" optional="hide"/>
