--- a/pe_customer_stock/wizard/customer_stock_deliver_wizard_view.xml
+++ b/pe_customer_stock/wizard/customer_stock_deliver_wizard_view.xml
@@ -23,7 +23,7 @@
                                 <field name="wizard_lines" mode="tree" context="{'shortname':True}">
                                     <tree create="0" delete="1" editable="top" edit="1">
                                         <field name="product_id" readonly="1" force_save="1"/>
-                                        <field name="location_id" readonly="1" force_save="1"/>
+                                        <field name="location_id" readonly="1" force_save="1" context="{'shortname': True}"/>
                                         <field name="entry_date" readonly="1" force_save="1"/>
                                         <field name="exit_date" readonly="0" force_save="1"/>
                                         
